--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"component": "generate-react component",
+		"gen": "plop"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.10.4",
@@ -18,6 +20,8 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.3.0",
+		"generate-react-cli": "^7.3.0",
+		"plop": "^3.1.1",
 		"vite": "^3.0.7"
 	}
 }
