--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
 		"jsxFactory": "h",
 		"jsxFragmentFactory": "Fragment"
 	},
-	"include": ["src"],
+	"include": ["src", "sw.ts", "sw.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
