--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"component": "generate-react component",
+		"lint": "eslint --cache --fix --ext .ts,.tsx src",
 		"gen": "plop"
 	},
 	"dependencies": {
@@ -20,6 +21,11 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.3.0",
+		"eslint": "^8.19.0",
+		"eslint-config-preact": "^1.3.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-simple-import-sort": "^8.0.0",
 		"plop": "^3.1.1",
 		"vite": "^3.0.7"
 	}
