--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
-	"name": "english_cheat-sheet",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"component": "generate-react component",
-		"lint": "eslint --cache --fix --ext .ts,.tsx src",
-		"gen": "plop"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.10.4",
-		"@emotion/styled": "^11.10.4",
-		"@mui/material": "^5.10.7",
-		"preact": "^10.10.1",
-		"react-router-dom": "^6.3.0",
-		"typescript": "^4.8.2"
-	},
-	"devDependencies": {
-		"@preact/preset-vite": "^2.3.0",
-		"eslint": "^8.19.0",
-		"eslint-config-preact": "^1.3.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-simple-import-sort": "^8.0.0",
-		"plop": "^3.1.1",
-		"vite": "^3.0.7"
-	}
+  "name": "english_cheat-sheet",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview",
+    "component": "generate-react component",
+    "gen": "plop"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
+    "preact": "^10.10.1",
+    "react-router-dom": "^6.3.0"
+  },
+  "devDependencies": {
+    "@preact/preset-vite": "^2.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "jest": "^29.1.2",
+    "plop": "^3.1.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.5.4",
+    "vite": "^3.0.7"
+  },
+  "volta": {
+    "node": "16.17.1"
+  }
 }
