--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "lint": "eslint --cache --fix --ext .ts,.tsx",
     "preview": "vite preview",
     "component": "generate-react component",
     "gen": "plop"
@@ -37,8 +38,12 @@
     "jest": "^29.1.2",
     "plop": "^3.1.1",
     "prettier": "^2.7.1",
+    "simple-git-hooks": "^2.8.1",
     "typescript": "^4.5.4",
     "vite": "^3.0.7"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "yarn lint"
   },
   "volta": {
     "node": "16.17.1"
