--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "prettier": "^2.7.1",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^4.5.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vite-plugin-checker": "^0.5.1"
   },
   "simple-git-hooks": {
     "pre-commit": "yarn lint"
